--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mariia-etno-backend",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
